--- a/remote/templates/sidebar.html
+++ b/remote/templates/sidebar.html
@@ -142,6 +142,21 @@
           </ul>
         </li>
 
+        <li class="treeview">
+          <a href="{% url 'index' %}">
+           <i class="fa fa-area-chart" aria-hidden="true"></i>
+            <span>Object Types</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            
+            <li><a href="{% url 'object_types' %}"><i class="fa fa-circle-o"></i>Object Types</a></li>
+            <li><a href="{% url 'add_object_type' %}"><i class="fa fa-circle-o"></i> Add Object Types</a></li>
+
+          </ul>
+        </li>
 
 
       </ul>
