--- a/remote/templates/add_object_sensor_mapping.html
+++ b/remote/templates/add_object_sensor_mapping.html
@@ -41,17 +41,18 @@
 
                 <div class="form-group">
                <label for="selectedobjecttypename"></label>
-                  <select class="form-control" name="selectedobjecttype" id="selectedobjecttype" required>
+                  <select class="form-control" name="selectedobjecttype" id="selectedobjecttypeid" required>
                     <option selected disabled>Select Object Type*</option>
                     {% for data in objecttype %}
                     <option value="{{data.objecttypeid}}">{{data.objecttypename}}</option>
                     {% endfor %}
                   </select>
+                  <p id="warning_record_length" style="display: none; color: red;">Length of this type of object exceeds. Please select another object type.</p>
                 </div>
 
-                <div class="form-group" id="masterobject">
+                <div class="form-group" id="masterobject" style="display:none;">
                   <label for="masterobject">Master Object</label>
-                  <input type="checkbox" name="masterobject" value="Y"  style="display:none;">
+                  <input type="checkbox" name="masterobject" value="Y">
                 </div>
 
                          <div class="form-group">
@@ -101,31 +102,20 @@
 
               
             </div>
-         <!--    <div class="form-group">
-              <input type="submit" class="form-control btn btn-success">
-           </div> -->
           </div>
            
           </form> 
-       <!--    <div class="form-group">
-              <a href="{% url 'object_sensor_mapping' %}"><button>Cancel</button></a>
-           </div> -->
-          <!-- ---------------------------------------- -->
-          
-            <!-- /.box-body -->
           </div>
         </div>
-        <!-- /.col -->
       </div>
- 
     </section>
     {% endblock %}
 
     {% block script %}
 
 <script type="text/javascript">
-    $('#selectedobjecttype').change(function(){
- var object_type=$(this).attr("value");
+    $('#selectedobjecttypeid').change(function(){
+ var object_type=$(this).find(":selected").val();
    $.ajax({
            url: "add-object-sensor-mapping",
            type:"POST",
@@ -133,17 +123,18 @@
               'object_type':object_type,'csrfmiddlewaretoken': token,
            },
            success: function(response) {
-            alert(response.status);
                if (response.status == true){
                 $('#masterobject').show();
                }
                else{
                 $('#masterobject').hide();
                }
+               if (response.record_status == false ){
+                $('#warning_record_length').show();
+               }
            }
        });
  });
  
-
 </script>
 {% endblock %}
