--- a/remote/templates/object_sensor_mapping.html
+++ b/remote/templates/object_sensor_mapping.html
@@ -12,39 +12,45 @@
             </div>
             <form method="get" action="{% url 'get_filter_mapping_data' %}">
               {% csrf_token %}
-              <div>
-                  <input type="radio"  name="active" value="Y"
-                         checked>
-                  <label for="activerecord">Active Records</label>
+              <div class="row">
+                <div class="col-md-3 fliter_select">
+                  <div style="padding-left: 9px;">
+                    <input type="radio"  name="active" value="Y"
+                    checked>
+                    <label for="activerecord">Active Records</label>
+                  </div>
+
+                  <div style="padding-left: 9px;">
+                    <input type="radio"  name="active" value="N">
+                    <label for="activerecord">Deactive Records</label>
+                  </div>
                 </div>
+                <div class="col-md-9 fliter_select">
+                  <select name="sensorid" id="sensorid-filter-id">
+                    <option value='' selected>All sensors</option>
+                    {% for data in  sensors %}
+                    <option value="{{data.sensorid}}">{{data.sensorid}}</option>
+                    {% endfor %}
+                  </select>
 
-                <div>
-                  <input type="radio"  name="active" value="N">
-                  <label for="activerecord">Deactive Records</label>
+                  <select name="workflowname" id="workflow-filter-id">
+                    <option value='' selected >All Workflows</option>
+                    {% for data in  workflows %}
+                    <option value="{{data.workflowid}}">{{data.workflowname}}</option>
+                    {% endfor %}
+                  </select>
+
+                  <select name="objecttype" id="object-type-filter-id">
+                    <option value='' selected >All objecttypes</option>
+                    {% for data in  objecttypes %}
+                    <option value="{{data.objecttypeid}}">{{data.objecttypename}}</option>
+                    {% endfor %}
+                  </select>
+
+                  <button type="button" class="btn btn-info" id="sensor_mapping_filter">Filter</button>
                 </div>
+              </div>
 
-                <select name="sensorid" id="sensorid-filter-id">
-                  <option value='' selected>All sensors</option>
-                  {% for data in  sensors %}
-                  <option value="{{data.sensorid}}">{{data.sensorid}}</option>
-                  {% endfor %}
-                </select>
-
-                <select name="workflowname" id="workflow-filter-id">
-                  <option value='' selected >All Workflows</option>
-                  {% for data in  workflows %}
-                  <option value="{{data.workflowid}}">{{data.workflowname}}</option>
-                  {% endfor %}
-                </select>
-
-                <select name="objecttype" id="object-type-filter-id">
-                  <option value='' selected >All objecttypes</option>
-                  {% for data in  objecttypes %}
-                  <option value="{{data.objecttypeid}}">{{data.objecttypename}}</option>
-                  {% endfor %}
-                </select>
-
-                <button type="button" class="btn btn-info" id="sensor_mapping_filter">Filter</button>
               
             </form>
             <div class="box-body">
